force-app/main/default/objects/OneCRM__Merge_Setting__c/OneCRM__Merge_Setting__c.object-meta.xml
<CustomObject>
    <label>Merge Setting</label>
    <nameField>
        <label>Merge Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merge Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>