force-app/main/default/objects/OneCRM__Merge_Setting__c/fields/OneCRM__Auto_Merge_Threshold__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Auto_Merge_Threshold__c</fullName>
    <label>Auto Merge Threshold</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>