force-app/main/default/objects/OneCRM__Merge_Setting__c/fields/OneCRM__FieldCriteriaJSON__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__FieldCriteriaJSON__c</fullName>
    <label>Field Criteria JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>