force-app/main/default/objects/OneCRM__Merge_Setting__c/fields/OneCRM__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__ObjectName__c</fullName>
    <externalId>true</externalId>
    <label>Object Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>